2004-02-17  Gary Thomas  <gary@mlbassoc.com>

	* cdl/hal_powerpc_ppc40x.cdl: Fix real time clock - this counter
	has no dividers in the chain (hence no need to divide by 4)

2003-10-15  Gary Thomas  <gary@mlbassoc.com>

	* include/var_regs.h: Changes to allow building with GCC-3.3.x
	since the newest GAS doesn't like spaces in expressions :-(

2003-10-02  Gary Thomas  <gary@mlbassoc.com>

	* include/var_regs.h: Add CPU serial number registers (405 only)

2003-09-26  Gary Thomas  <gary@mlbassoc.com>

	* src/ppc405_pci.c: IRQ mapping now defined by platform.

2003-09-20  Gary Thomas  <gary@mlbassoc.com>

	* src/ppc405_pci.c: Need call to cyg_pci_init() to get proper I/O
	addressing setup.

2003-09-19  Gary Thomas  <gary@mlbassoc.com>

	* src/ppc405_pci.c: New file - basic support for PCI on PPC 405GP

	* src/hal_diag.c: New file - diagnostic I/O support (previously
	was defined by platforms).  Note: only for 405GP based devices.

2002-11-21  Gary Thomas  <gary@mlbassoc.com>

	* src/var_intr.c: 
	* include/variant.inc: 
	* include/var_intr.h: Better variant/platform support (platforms can
	override most all default behaviour).

2002-11-20  Gary Thomas  <gary@mlbassoc.com>

	* include/var_cache.h: Cache sizes differ based on CPU.

	* include/var_intr.h: 
	* include/var_regs.h:
	* src/var_intr.c: Split interrupt control based on CPU type since
	403 uses a different controller than the 405 family.

	* cdl/hal_powerpc_ppc40x.cdl: Add 403/405/405GP controls.  Also,
	enable ROM monitor support (GDB).

2002-05-22  Jesper Skov  <jskov@redhat.com>

	* src/var_intr.c: Fixed warning.
	* src/var_misc.c: Same.

2002-05-13  Gary Thomas  <gthomas@redhat.com>

	* cdl/hal_powerpc_ppc40x.cdl: This processor family has no FPU.

2001-01-26  Jesper Skov  <jskov@redhat.com>

	* include/var_intr.h: Include plf_intr.h

2001-01-18  Gary Thomas  <gthomas@redhat.com>

	* cdl/hal_powerpc_ppc40x.cdl: Move CYGSEM_HAL_USE_ROM_MONITOR to
	platform CDL.

2001-01-17  Gary Thomas  <gthomas@redhat.com>
