@@ -9,7 +9,7 @@
 ## -------------------------------------------
 ## This file is part of eCos, the Embedded Configurable Operating System.
 ## Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
-## Copyright (C) 2002, 2003 Gary Thomas
+## Copyright (C) 2002, 2003, 2004 Gary Thomas
 ##
 ## eCos is free software; you can redistribute it and/or modify it under
 ## the terms of the GNU General Public License as published by the Free
@@ -98,6 +98,11 @@ cdl_package CYGPKG_HAL_POWERPC_PPC40x {
         description   "Variant PCI support - only for 405GP"
         default_value 1
         compile       ppc405_pci.c
+
+        cdl_option CYGSEM_HAL_POWERPC_PPC405_PCI_SHOW_BUS {
+            display       "Display PCI Bus devices"
+            default_value 1
+        }
     }
 
     cdl_component CYGHWR_HAL_POWERPC_PPC405_IO {
